[project]
name = "knowledge-distillation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.4.0",
    "bitsandbytes>=0.45.3",
    "datasets>=3.3.2",
    "dotenv>=0.9.9",
    "torch>=2.6.0",
    "torchmetrics>=1.6.2",
    "transformers>=4.49.0",
]
